Correctly builds and can be imported

--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "listella-lib",
-  "version": "1.0.0",
+  "version": "1.0.11",
   "description": "",
-  "main": "index.js",
+  "main": "./index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "pub": "cp package.json ./dist/package.json && cp index.scss ./dist/index.scss && npm publish ./dist --access public"
   },
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "@types/react": "^18.2.6",
     "localforage": "^1.10.0",
